Kamata-san's photo added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -112,6 +112,7 @@
         - name_and_title: |-
             Cisco Systems<br />
             鎌田 徹平
+          photo: kamata.jpg
       abstract: |-
         「Network as a Service」（NaaS）は、クラウドコンピュー
         ティングの一種であり、ネットワークサービスを提供するモ
