Taniwaki-san's session slide added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -171,6 +171,8 @@
         ターネットが社会基盤になったが故に顕在化している問題も
         多い。講演ではこうした問題点について展望し、今後の在り
         方について考える。
+      slides:
+        - file: 2023_Data-Driven-Society.pdf
     - title: 6G時代のネットワーク・コンピューティングインフラ実現に向けた取り組み
       time: "13:30-14:00"
       type: スポンサーセッション
