the slide for most sessions added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -74,6 +74,8 @@
         ます。その状況(半分弱音？)を共有し，参加者の皆さんからアド
         バイスをいただければと考えています。なお，コンテナの長所等々
         の説明は割愛します。
+      slides:
+        - file: 2023_BoF-kanaumi.pdf
     - title: 閉会
       time: "20:30"
 - date: November 10, 2023 (@メインホール)
@@ -104,6 +106,8 @@
         れているのでしょうか。 そして、そのパラダイムで本当に
         問題は解決されるのでしょうか。この講演では、Web3 を支
         えるとされる技術の現実を露わにします。
+      slides:
+        - file: 2023_Web3.pdf
     - title: SP Network as a Serviceに対するCiscoの取り組み
       time: "10:50-11:20"
       type: スポンサーセッション
@@ -126,6 +130,8 @@
         かのチャレンジがあります。本講演では、Underlay as a 
         Platformの考え方や、NaaSにおいてSPが果たすべき役割など、
         NaaSに対するシスコのアプローチについて紹介します。
+      slides:
+        - file: 2023_SPNaaS.pdf
     - title: コネクティッドカーとエッジコンピューティングによるグリーンモビリティへの挑戦
       time: "11:20-11:50"
       type: 講演
@@ -153,6 +159,8 @@
         が多いグリーンエネルギーを 積極的に活用すべく、エッジ
         処理と組み合わせたグリーンモビリティを効率的に実現する
         試みについて述べる。
+      slides:
+        - file: 2023_Green-Mobility.pdf
     - title: 休憩
       time: "11:50-13:00"
     - title: データ駆動社会の実現に向けて
@@ -193,6 +201,8 @@
         トワーク・コンピューティングインフラのコンセプトや実現
         に向けた取り組み、また、オープンコミュニティでの活動
         について紹介いたします。
+      slides:
+        - file: 2023_Network-Infrastructure-in-6G-era.pdf
     - title: DNSの進化と研究開発での取り組みについて
       time: "14:00-14:30"
       type: スポンサーセッション
@@ -210,6 +220,8 @@
         進化した部分を簡単に説明しつつ、その新たな機能について
         も実験および検証を行ないやすくするための、DNSライブラリ
         やDNSフルリゾルバの研究開発実装について紹介します。
+      slides:
+        - file: 2023_DNS.pdf
     - title: データ分析観点からみるインシデント対応
       time: "14:30-15:00"
       type: 講演
@@ -257,6 +269,9 @@
         トワークの多くのユースケースに使用できるかを紹介します。 ネットワー
         キングのためのML/AI詳細に関しては、こちらをご参照ください
         [www.jpvasseur.me](https://www.jpvasseur.me)
+      slides:
+        - file: 2023_AI-Networking-Intro.pdf
+        - file: 2023_AI-Networking.pdf
     - title: コンテナ基盤を活用したIoTサービスとeSIMアプレット連携の取り組みについて
       time: "15:45-16:15"
       type: スポンサーセッション
@@ -280,7 +295,9 @@
         なマネージドサービスを活用して開発されています。
         今回は、IoT Connect Gatewayに加えてeSIMアプレッ
         トの機能を活用したモバイル関連データの連携の取
-        り組みに関してご紹介します。      
+        り組みに関してご紹介します。
+      slides:
+        - file: 2023_IoT-Service-and-eSIM-Applet.pdf
     - title: SONiC + ホワイトボックススイッチで実現するEVPN/VXLANロスレスイーサ
       time: "16:15-16:45"
       type: スポンサーセッション
@@ -296,6 +313,8 @@
         ットを構築する取り組みが進んでいます。本講演では、SONiC
         とホワイトボックススイッチにて構築したEVPN/VXLANネットワ
         ークにてRoCEv2を検証した結果をご紹介します。
+      slides:
+        - file: 2023_Lossless-Ethternet.pdf
     - title: Interop Tokyo 2023 ShowNetのVPNベースバックボーン
       time: "16:45-17:15"
       type: 講演
@@ -315,6 +334,8 @@
         にVPN化し、会場のトラフィックを収容しました。 本講演では、
         その設計、実運用を通して得た知見、そして課題について紹介
         します。
+      slides:
+        - file: 2023_Shownet-2023.pdf
     - title: 休憩
       time: "17:15-17:30"
     - title: AIは、ネットワークエンジニアのタスクを代替できるのか？ ネットワークエンジニアリングの未来を探る！
@@ -347,6 +368,8 @@
         ジョンを共有します。AIとネットワークエンジニアが協働
         する未来で、ネットワークの効率、セキュリティ、および
         信頼性を最大化するためのディスカッションを行います。
+      slides:
+        - file: 2023_AI-and-Network-Engineer.pdf
     - title: 閉会の挨拶
       time: "18:30-"
       presenters:
