Teruya-san's slide added.

--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -41,6 +41,8 @@
         形についても議論を展開します。参加者の皆様と共
         に、地域ニーズに応えるICTインフラ構築の道筋を明
         らかにしていくことを目指します。
+      slides:
+        - file: 2023_EdgeComputing-in-Okinawa.pdf
     - title: 休憩
       time: "19:00"
     - title: クラウドネイティブな新しいOSSのネットワークコントローラ「Kuesta」の概要と実用化に向けた取り組み
