--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -62,6 +62,8 @@
         加開発(デバイスドライバ部分のAnsible連携、Kuesta
         が管理するデータとネットワークデバイスとの一貫
         性担保機能等)で得た知見について紹介をする。
+      slides:
+        - file: 2023_CloudNative-NW-Controller-Kuesta.pdf
     - title: ネットワーク屋がコンテナスキルを身につけたいと考えたとき
       time: "20:00"
       type: BoF
