--- a/_data/onic_programs.yml
+++ b/_data/onic_programs.yml
@@ -1,257 +1,260 @@
-- date: October 29, 2022
+- date: October 19, 2018
   sessions:
-    - title: 受付開始
-      time: 10:00-
-    - title: 開会宣言
-      time: 10:20-10:30
+    - title: 開会の挨拶
+      time: 10:00-10:05
       presenters:
         - name_and_title: |-
-            ONIC実行委員会委員長
-    - title: フューチャープルーニング：ネットワークの進化とAIの役割
-      time: 10:30-11:00
-      type: 講演
-      tag: s_01
+            Open NetworkIng Conference Japan2018 実行委員会
+    - title: 自動運転と通信の融合へ向けた展望
+      time: 10:05-10:35
+      type: 基調講演
+      tag: c01
       presenters:
         - name_and_title: |-
-            デジタルウェイ・テクノロジーズ<br />
-            デジタルイノベーション部<br />
-            田中　麻衣子
-          photo: placeholder-120x140.png
+            株式会社KDDI総合研究所
+            大谷 朋広
       abstract: |-
-        このセッションでは、未来のネットワークトレンドと、人工知
-        能（AI）がネットワーク管理、セキュリティ、および最適化に
-        果たす役割に焦点を当てます。AIによる自己適応型ネットワー
-        クの展望について議論し、ネットワークインフラストラクチャ
-        の新たな展開に関する洞察を提供します。
-        [https://google.com](https://google.com)
-      slides:
-        - file: placeholder.pdf
-    - title: 5G時代のネットワークセキュリティ戦略
-      time: 11:00-11:30
-      type: スポンサーセッション
-      tag: s_02
+        国内外で、自動運転(Level 3や4)のトライアルが盛んに行われるようになってきている。
+        Level4の自動運転では、遠隔での監視・制御が不可欠であり、今後、社会実装の検討を
+        行うに当たっては、通信の役割がますます大きくなる。本講演では、アジア太平洋地域
+        ITSフォーラム2018福岡のデモンストレーションを紹介しながら、自動運転と通信と
+        の融合の展望について述べる。
+    - title: gVisor によるコンテナのサンドボックス化と Kubernetes の最新動向
+      time: 10:35-11:05
+      type: 特別講演
+      tag: c02
       presenters:
         - name_and_title: |-
-            インテリジェントネットワーク合同会社<br />
-            山本　健太郎
-          photo: placeholder-120x140.png
+            Google
+            田村 芳明
       abstract: |-
-        このセッションでは、5Gネットワーク環境におけるセキュリ
-        ティの課題と戦略に焦点を当てます。新たなセキュリティリ
-        スクと5Gテクノロジーの特性に対処するためのアプローチや
-        ベストプラクティスについて討議し、ネットワークセキュリ
-        ティの強化に向けた戦略を検討します。
-      slides:
-        - file: 2022_Routing-Platform.pdf
-    - title: エッジコンピューティングとIoTの融合：ネットワークの未来
-      time: 11:30-12:00
-      type: 講演
-      tag: s_03
-      presenters:
-        - name_and_title: |-
-            クラウドソリューションズ株式会社<br />
-            鈴木　みずき 
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、エッジコンピューティングとインター
-        ネット・オブ・シングス（IoT）がネットワークアーキテク
-        チャとビジネスモデルに与える影響に焦点を当てます。エッ
-        ジデバイスからのデータ処理とネットワーク要件への対応に
-        ついて議論し、これらの技術がネットワークの未来をどのよ
-        うに変えるかについて考察します。
-    - title: クラウドネイティブネットワークの実装と運用
-      time: 12:00-12:15
-      type: スポンサーセッション
-      tag: s_04
-      presenters:
-        - name_and_title: |-
-            データマスター株式会社<br />
-            クラウドサービス開発部<br />
-            小林　悠子
-          photo: placeholder-120x140.png
-        - name_and_title: |-
-            データマスター株式会社<br />
-            クラウドサービス開発部<br />
-            佐藤　大輔
-          photo: placeholder-120x140.png
-      slides:
-        - file: placeholder.pdf
-    - title: お昼休憩
-    - title: 量子ネットワーキングの未来：安全性とスケーラビリティ
-      time: 13:30-14:00
-      type: 講演
-      tag: s_05
-      presenters:
-        - name_and_title: |-
-            サイバーコアテック合同会社<br />
-            サイバーセキュリティチーム<br />
-            高橋　美咲
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、量子ネットワーキングの最新動向と
-        その未来に焦点を当てます。量子暗号技術と量子ネットワ
-        ークの可能性について議論し、これらの革新的なアプロー
-        チがネットワーク通信の安全性とスケーラビリティにどの
-        ような影響を及ぼすかについて考察します。
-    - title: サイバーセキュリティと人工知能：未知の脅威への対応
-      time: 14:00-14:30
-      type: スポンサーセッション
-      tag: s_06
-      presenters:
-        - name_and_title: |-
-            テクノロジーフロンティア株式会社<br />
-            中村　一郎 
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、人工知能と機械学習がサイバーセキュ
-        リティ分野で果たす役割に焦点を当てます。未知の脅威や高
-        度な攻撃への対策としてAI技術の活用について議論し、セキ
-        ュリティの向上とインシデント対応の最新アプローチを探り
-        ます。
-    - title: グローバルなデジタルインフラ：ネットワークの普及と課題
-      time: 14:30-15:00
-      type: 講演
-      tag: s_07
-      presenters:
-        - name_and_title: |-
-            ビジョンテックジャパン有限会社</br />
-            町田　真理子
-          photo: placeholder-120x140.png
-        - name_and_title: |-
-            ビジョンテックジャパン有限会社</br />
-            渡辺　雅彦
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、世界中のデジタルインフラストラクチャ
-        の普及と課題に焦点を当てます。新興市場と発展途中国におけ
-        るデジタルインクルージョンの促進、インフラストラクチャの
-        持続可能性、そして地域ごとのネットワーク課題について討議
-        し、国際的な協力の必要性について考えます。
-      slides:
-        - file: 2022_Service-Mesh.pdf
-        - file: 2022_Service-Mesh2.pdf
+        コンテナと Kubernets はアプリケーションのマイクロサービス化には欠かせなくなりました。
+        一方で、コンテナをセキュリティの観点から保護することは、十分に理解されていません。
+        インフラのユーザがアップロードしたコードをどのように実行するか、ソースコードに
+        アクセスできないサードパーティのアプリケーションをどうやって実行するか、
+        このセッションでは、 Kubernetes Engine で信頼できるワークロードと信頼できない
+        ワークロードを実行する時の様々なプラクティス、長所と短所を説明します。
+        さらに gVisor の技術解説に加え、 Kubernetes コミュニティの最新動向を紹介します。
+    - title: NTTコミュニケーションズにおけるSDN技術開発の取り組み
+      time: 11:20-11:50
+      type: スポンサーセッション1
+      tag: s01
     - title: 休憩
-      time: 15:00-15:10
-    - title: 量子コンピューティングとネットワーク：新たな可能性への突破口
+      time: 11:05-11:20
+      presenters:
+        - name_and_title: |-
+            NTTコミュニケーションズ株式会社
+            境 智史
+      abstract: |-
+        NTTコミュニケーションズはこれまで、データセンタ内に始まり、データセンタ間、
+        クラウド接続部分におけるSDN化を進めてまいりました。
+        現在は、Disaggregationやオープンソースを活用した内製開発、VxF（Virtual 
+        Functions）を用いた付加価値提供の検討などをテーマに技術開発に取り組んでおります。
+        今回はその一端をご紹介させていただければと思います。
+      slides:
+        - file: NTTCom_sakai.pdf
+    - title: P4/Stratum活用に向けたプログラマブルスイッチの実装・検討
+      time: 11:50-12:20
+      type: OSS活動
+      tag: c03
+      presenters:
+        - name_and_title: |-
+            日本電信電話株式会社 ネットワークサービスシステム研究所
+            武井 勇樹
+      slides:
+        - file: NTT_takei.pdf
+    - title: お昼休憩
+      time: 12:20-13:30
+    - title: ブロックチェーンが加速する「自律分散型」異業種共創
+             ～データ流通・利活用に向けて乗り越えるべきマーケット課題～
+      time: 13:30-14:00
+      type: スポンサーセッション2
+      tag: s02
+      presenters:
+        - name_and_title: |-
+            富士通株式会社
+            佐々木 泰芳
+            池田 栄次
+      abstract: |-
+        モノやサービスが飽和している現在において、生活者に新たな価値を提供しようと
+        チャレンジする企業の多くは、「保有するデータの可視化」に取り組み、
+        「データ活用は1社では限界」という課題認識に至っている。
+        当社は東京大学 大澤研究室との産学連携、ブロックチェーン、「分散の力」を
+        ベースとした「Virtuora DXデータ流通・利活用サービス」の提供を通じて
+        マーケットにおける課題解決の支援に取り組んでいる。
+        異業種共創の 実例を通じて、その課題をいかに解決しつつあるか、また、
+        さらにその先に 見えてきた本質的な課題を紹介する。
+    - title: SD-WANとuCPEの導入事例と今後の展望（仮）
+      time: 14:00-14:30
+      type: SD-WAN事例
+      tag: c04
+      presenters:
+        - name_and_title: |-
+            NTTコミュニケーションズ株式会社
+            可児島 隆
+      abstract: |-
+        これまで海外での導入が先行していたSD-WANですが、日本でも導入する企業が増えてきました。
+        日本企業やモータースポーツへの導入を通じて見えてきた事、特に要望が多いクラウドサービスへの
+        アクセスを例に取り上げ、SD-WANの導入事例をご紹介します。また、SD-WANと共に普及が
+        進みそうなホワイトボックスやuCPEの話題も取り上げ、今後のSD-WANを展望したいと思います。
+      slides:
+        - file: NTTCom_Kanishima_ONIC2018.pdf
+    - title: 休憩
+      time: 14:30-14:40
+    - title: こんなに違うコンテナ・ネットワーキングあれこれ
+      time: 14:40-15:10
+      type: スポンサーセッション3
+      tag: s03
+      presenters:
+        - name_and_title: |-
+            ヴイエムウェア株式会社
+            進藤 資訓
+      abstract: |-
+        コンテナのためのネットワーク機能を実現するための仕様であるContainer Network Interface 
+        (CNI) は、Kubernetes が採用したこともあり急激にエコシステムが拡大しています。
+        現在、多数のオープンソースソフトウェアや商用のCNI プライグインが出てきていますが、
+        それらの動作の仕組みはまちまちです。
+        本セッションでは代表的なCNIプラグインであるFlannel, Canal Project, Canal, 
+        NSX-T Container Pluginなどを取り上げ、それぞれの動作概要や特性を解説し、
+        使い所などについて考えてみます。
+      slides:
+        - file: VMware-ONC-2018-ContainerNetworking.pdf
+    - title: SRv6 Network Programming – ネットワークシステムの分離と再統合
       time: 15:10-15:40
-      type: 講演
-      tag: s_08
+      type: 次世代NW技術 SRv6
+      tag: c05
       presenters:
         - name_and_title: |-
-            デジタルファクトリー合同会社<br />
-            加藤　麗子
-          photo: placeholder-120x140.png
+            Cisco Systems
+            河野 美也
       abstract: |-
-        このセッションでは、量子コンピューティングがネットワーク
-        分野にもたらす可能性に焦点を当てます。量子アルゴリズムと
-        ネットワーク最適化の関連性について議論し、量子コンピュー
-        ティングがネットワーク設計とセキュリティに与える影響につ
-        いて検証します。
-    - title: スマートシティの未来：ネットワーク技術と都市インフラ
-      time: 15:40-16:10
-      type: スポンサーセッション
-      tag: s_09
+        「分離と統合」は、分散と集中、ボトムアップとトップダウン、専用と汎用などと同様、
+        ネットワークシステムにおける大きなアーキテクチャ指針のひとつである。
+        今の時代を大きく捉えると、「分離」が大きなトレンドになっていると考えられる。
+        SDN/NFVに始まりWhite box SWやOpen Network OSを組み合わせるDis-Aggregation、
+        モバイル・ブロードバンドなど加入者管理系におけるCUPS、無線アクセスにおけるvRANなど。
+        サービスオーバレイとアンダーレイの分離も、現代のネットワーク設計の主流となっている。
+        サービスは、アンダーレイ技術にとらわれることなく、一方アンダーレイは転送に徹することにより、
+        サービスの柔軟性・迅速性と、アンダーレイのシンプル性・スケーラビリティを獲得する。VXLAN, 
+        SD-WAN, MobileのGTP-U tunnelなどは全て、サービスオーバレイ技術である。
+        本セッションのテーマである SRv6 Network Programming は、SIDに機能や特性を埋め込み、
+        かつ用途に応じてTrafficをSteeringさせることを可能とする。
+        そこで本セッションでは、SRv6 Networking Programmingの動作と適用例を概観し、
+        これまでのネットワークシステムを分離と再統合という視点から見直し、Digital時代に求められる
+        アーキテクチャを考察することを試みる。
+    - title: 休憩
+      time: 15:40-15:50
+    - title: LiquidMetalで始める新しいラボ環境の使い方
+      time: 15:50-16:20
+      type: スポンサーセッション4
+      tag: s04
       presenters:
         - name_and_title: |-
-            プログレッシブシステムズ株式会社<br />
-            伊藤　剛太
-          photo: placeholder-120x140.png
+            株式会社あくしゅ 代表取締役
+            山崎 泰宏
       abstract: |-
-        このセッションでは、スマートシティ概念とネットワーク技
-        術の相互作用に焦点を当てます。都市インフラストラクチャ
-        のデジタル化、IoTセンサーの展開、および市民サービスの改
-        善におけるネットワークの役割について討議し、持続可能な
-        都市の実現に向けた戦略を考察します。
+        近年、クラウドが、ますます環境のソフトウェア化を促進しています。 
+        一方で、ハードウェア必要性がなくなったわけではありません。
+        クラウドでもハードウェアを意識したベアメタルサービスが登場するなど、ニッチであるがゆえに、
+        効率化を求められる技術領域となっています。 
+        LiquidMetalは、そうしたベアメタルのうち、特にネットワーク機器のプロビジョニングを
+        するもので、ラボ環境の構築に効果を発揮します。
+        その活用方法をデモムービーを交えながらご紹介いたします。
+    - title: 「ネットワーク図」のモデル化とモデルを起点にした自動化の可能性
+      time: 16:20-16:50
+      type: ネットワークモデリング
+      tag: c06
+      presenters:
+        - name_and_title: |-
+            TIS株式会社
+            萩原 学
+      abstract: |-
+        「ネットワーク図」はネットワークの設計・運用には欠かせないものです。
+        しかし、ソフトウェアで扱える形にするのが難しく、うまく構築・運用自動化の枠組みに
+        取りこめていないという課題があります。
+        そんな中、2018年3月にRFC8345「ネットワークトポロジのデータモデル」が発行されました。
+        本発表では、いくつかの実装例をまじえながら、RFC8345定義されているデータモデルと
+        その特徴は何か、応用としてどういったことができそうなのかを紹介します。
       slides:
-        - file: placeholder.pdf
-    - title: ハイパフォーマンスネットワーク設計の最新トレンド
-      time: 16:10-16:40
-      type: 講演
-      tag: s_10
+        - file: TIS-onic2018.pdf
+    - title: 休憩
+      time: 16:50-17:00
+    - title: 検証テストを自動化せよ！〜NSO と pyATS の組み合わせでここまでできる〜
+      time: 17:00-17:30
+      type: スポンサーセッション5
+      tag: s05
       presenters:
         - name_and_title: |-
-            インフィニティインフォテック株式会社<br />
-            林　梨香
-          photo: placeholder-120x140.png
+            Cisco Systems
+            佐々木 俊輔
       abstract: |-
-        このセッションでは、ハイパフォーマンスネットワーク設計の
-        最新トレンドに焦点を当てます。高速データ伝送、低遅延通信、
-        および高信頼性ネットワークの設計戦略について議論し、次世
-        代のネットワークインフラストラクチャに向けた革新的なアイ
-        デアを探ります。
+        自動化がビジネスに欠かせないキーワードとなる昨今、ITインフラの中核であるネットワークの
+        自動化は避けて通れないテーマとなってきました。
+        ネットワーク構築・運用のライフサイクル（Plan, Design, Implement, Operate, Optimize) 
+        の中で、Design(設計) から Implement(実装) に橋渡しする Validation (検証) は
+        人手も時間もかかる工程で、自動化に積極的に取り組んでいる企業も多いのではないでしょうか？ 
+        本セッションでは、シスコの Network Services Orchestraotr (NSO) と
+        テスト自動化フレームワーク pyATS を組み合わせることで、この検証工程をイマドキで
+        モダンなツールで自動化する手法をご紹介します。
       slides:
-        - file: 2022_AETHER-Open-5G-Connected-Edge-Cloud.pdf
-    - title: 休憩（コーヒータイム）
-      time: 16:40-17:10
-    - title: サイバーレジリエンス：攻撃からの復旧とネットワーク保護
-      time: 17:10-17:40
-      type: 講演
-      tag: s_11
+        - file: onic2018_cisco_v1.1.pdf
+    - title: オープンソースソフトウェアを活用したホワイトボックススイッチの開発について
+      time: 17:30-18:00
+      type: ユースケース
+      tag: c07
       presenters:
         - name_and_title: |-
-            クラウドウェイブテクノロジー合同会社<br />
-            大野　宏治
-          photo: placeholder-120x140.png
+            KDDI株式会社
+            鈴木 雄一郎
       abstract: |-
-        このセッションでは、サイバー攻撃からの迅速な復旧とネット
-        ワークの保護に焦点を当てます。サイバーレジリエンスの実装
-        戦略やインシデント対応プランについて討議し、ビジネス継続
-        性の確保とネットワークセキュリティの向上に関する最新の情
-        報を提供します。
+        ホワイトボックススイッチの導入はOTTだけではなく、Telco/キャリア領域まで拡大の兆しが見えている。 
+        例えば、ある海外キャリアにおいては基地局配下に設置するルータとしてホワイトボックススイッチの
+        導入を発表している。 
+        KDDIにおいてもホワイトボックススイッチの導入検討を行っており、評価のためにプロトタイプの
+        開発を進めている。 
+        本講演では現在我々が進めているオープンソースソフトウェアを活用したホワイトボックススイッチの
+        開発について紹介する。
       slides:
-        - file: 2022_-AWS_Azure.pdf
-    - title: ネットワークデータの分析とビッグデータ戦略
-      time: 17:40-18:10
-      type: 講演
-      tag: s_12
-      presenters:
-        - name_and_title: |-
-            イノベーションドライブ株式会社<br />
-            松田　真理
-          photo: placeholder-120x140.png
-      abstract: |-
-        このセッションでは、ネットワークデータの収集と分析に焦点
-        を当てます。ビッグデータテクノロジーの導入によるネットワー
-        クの最適化、トラブルシューティング、およびビジネスインテ
-        リジェンスへの応用について議論し、データ駆動型のネットワー
-        ク管理戦略を探求します。
-      slides:
-        - file: 2022_Network-as-Code.pdf
-    - title: ネットワークのエネルギー効率化と持続可能性
+        - file: KDDI_suzuki2.pdf
+    - title: 休憩
+      time: 18:00-18:10
+    - title: Edge Heavy Computing におけるネットワークの活用と5Gへの期待
       time: 18:10-18:40
-      type: 講演
-      tag: s_13
+      type: ユースケース
+      tag: c08
       presenters:
         - name_and_title: |-
-            テックトランスフォームジャパン有限会社<br />
-            佐々木　俊一
-          photo: placeholder-120x140.png
+            株式会社Preferred Networks
+            浅井 大史
       abstract: |-
-        このセッションでは、ネットワークインフラストラクチャのエ
-        ネルギー消費と持続可能性に焦点を当てます。省エネルギーネッ
-        トワーク設計、再生可能エネルギーの活用、および環境に配慮
-        したネットワーク運用について討議し、エネルギー効率の向上
-        と環境への配慮に関する戦略を検討します。
-      slides:
-        - file: 2022_Introduction-to-Cilium-from-Telco-and-On-premise-Perspective.pdf
-    - title: デジタルツインズとネットワークの未来
+        Internet of Things (IoT) の発展により、多種多様のセンサから得られる大量のデータを処理し、
+        その処理結果に基づき機械などのアクチュエータをリアルタイムに動かす基盤が必要となってきています。
+        Preferred Networksの取り組むEdge Heavy Computingでは、データ処理計算をクラウドなどの
+        インターネット越しの計算機資源からエッジにオフロードすることで画像などの大容量データを用いた
+        リアルタイム制御を実現しています。一方、ディープラーニングのモデル生成（学習）は超高性能な
+        計算機クラスタが必要であり、機械学習基盤においては分散計算のためにネットワークを活用しています。
+        本講演では、Preferred Networksにおけるネットワークの活用事例と5Gなど今後のネットワーク技術
+        への期待について紹介します。
+    - title: IP経路制御技術でつくる実践的なサービスチェイニング@ShowNet 2018
       time: 18:40-19:10
-      type: 講演
-      tag: s_14
+      type: ユースケース ShowNet
+      tag: c09
       presenters:
         - name_and_title: |-
-            デジタルビジョンテクノロジーズ合同会社<br />
-            高田　幸子
-          photo: placeholder-120x140.png
+            Interop Tokyo 2018 ShowNet NOCチームメンバー
+            中村 遼
       abstract: |-
-        このセッションでは、デジタルツインズ技術とネットワーク
-        の相互関係に焦点を当てます。デジタルツインズがネットワー
-        クデザイン、監視、および最適化にどのように活用できるか
-        について議論し、デジタルツインズがネットワーク管理にも
-        たらす可能性について検証します。
+        毎年6月に開催されるInterop Tokyoにおいて構築される世界最大のデモンストレーションネットワーク
+        であるShowNetでは、2012年から、OpenFlowをはじめ様々なSDN/NFV技術を実運用環境で検証してきました。
+        一方2017年は、IP経路制御技術をフル活用してサービスチェイニングを構築しました。 
+        2018年は、2017年に実施したIP経路制御、OSPFとBGPによるサービスチェイニングをさらに発展させ、
+        複数拠点にまたがって、ファンクションを自由な順番で組み合わせられるサービスチェイニングを構築し、
+        ユーザに対して提供しました。 
+        本発表では、ShowNetでSDN/NFVを継続して検証した経験から、なぜ今IP経路制御技術を採用し、
+        どのような設計で、サービスチェイニングの構築と運用を行ったのか、そしてそこから得られた知見について解説します。
       slides:
-        - file: placeholder.pdf
-    - title: 閉会宣言
+        - file: ShowNet2018.pdf
+    - title: 閉会の挨拶
       time: 19:10-
       presenters:
         - name_and_title: |-
