--- a/_data/onic_sponsors.yml
+++ b/_data/onic_sponsors.yml
@@ -1,15 +1,15 @@
 - tier_name: 協賛企業
   size: large
   sponsors:
-    - name: サイバーファーストコネクト株式会社
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
-    - name: 株式会社デジタルウェイワイヤレス
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
-    - name: ネクストジェネレーションネットワークス合同会社
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
-    - name: クラウドソリッドコネクト株式会社
-      profile: https://www.example.com/
-      logo: placeholder-500x130.png
+    - name: ヴイエムウェア株式会社
+      profile: https://www.vmware.com/jp.html
+      logo: vmw.png
+    - name: NTTコミュニケーションズ株式会社
+      profile: https://www.ntt.com/index.html
+      logo: nttcom.jpg
+    - name: 富士通株式会社
+      profile: https://www.fujitsu.com/jp/
+      logo: fujitsu.jpg
+    - name: シスコシステムズ合同会社
+      profile: https://www.cisco.com/c/ja_jp/index.html
+      logo: Cisco.jpg
